# auto-api

./: .gitignore  README.md  pyproject.toml
docs/: snapatac2_api.md
src/auto_api/: __init__.py  cli.py  extractor.py  markdown.py  models.py  resolver.py
tests/: test_cli.py  test_extractor.py  test_markdown.py  test_resolver.py
tests/fixtures/: sample_lib.py
tests/fixtures/sample_pkg/: _internal.py  helpers.py
tests/fixtures/sample_pkg/nested/: deep.py
